fix: off-center info-container

--- a/src/common/Toast/ToastItem/styles.less
+++ b/src/common/Toast/ToastItem/styles.less
@@ -47,7 +47,7 @@
     .info-container {
         flex: 1;
         align-self: stretch;
-        padding: 0.1rem 1rem;
+        padding: 0.2rem 1rem;
 
         .title-container {
             font-size: 1.2rem;
@@ -74,14 +74,13 @@
             display: block;
             width: 100%;
             height: 100%;
-            color: var(--primary-accent-color);
-            opacity: 0.3;
+            color: var(--primary-foreground-color);
+            opacity: 0.4;
         }
 
         &:hover {
             .icon {
-                color: var(--primary-foreground-color);
-                opacity: 0.7;
+                opacity: 1;
             }
         }
     }
